force-app/main/default/objects/Asset__x/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <externalDeveloperName>PurchaseDate</externalDeveloperName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>