force-app/main/default/objects/Asset__x/fields/Reservation_Solutions_Child_Asset_5_c__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Solutions_Child_Asset_5_c__c</fullName>
    <externalDeveloperName>Reservation_Solutions_Child_Asset_5__c</externalDeveloperName>
    <label>Reservation Solutions Child Asset #5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Area Search</fullName>
            </value>
            <value>
                <fullName>Call Center - Property Direct</fullName>
            </value>
            <value>
                <fullName>Call Center - Third Party</fullName>
            </value>
            <value>
                <fullName>Channel Direct Integrated</fullName>
            </value>
            <value>
                <fullName>Commission Processing</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>DataBridge</fullName>
            </value>
            <value>
                <fullName>Demand and Distribution</fullName>
            </value>
            <value>
                <fullName>Demand Services</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>iDeas</fullName>
            </value>
            <value>
                <fullName>iHotelier OTA Sync</fullName>
            </value>
            <value>
                <fullName>iHotelier Web 3.0</fullName>
            </value>
            <value>
                <fullName>iTrak</fullName>
            </value>
            <value>
                <fullName>MobiBook</fullName>
            </value>
            <value>
                <fullName>PMS Connect</fullName>
            </value>
            <value>
                <fullName>StayHip</fullName>
            </value>
            <value>
                <fullName>Web - iStay</fullName>
            </value>
            <value>
                <fullName>Web - iStay2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>