force-app/main/default/objects/Asset__x/fields/Set_Up_Info_Received_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Info_Received_Date_c__c</fullName>
    <externalDeveloperName>Set_Up_Info_Received_Date__c</externalDeveloperName>
    <label>Set Up Info Received Date</label>
    <type>DateTime</type>
</CustomField>