force-app/main/default/objects/Asset__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Migrated - RateGain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>