force-app/main/default/objects/Asset__x/fields/Sub_Assets_c__c.field-meta.xml
<CustomField>
    <fullName>Sub_Assets_c__c</fullName>
    <externalDeveloperName>Sub_Assets__c</externalDeveloperName>
    <label>Sub Assets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency360 EE</fullName>
            </value>
            <value>
                <fullName>Agency360 PE</fullName>
            </value>
            <value>
                <fullName>Allocation Optimizer</fullName>
            </value>
            <value>
                <fullName>Area Search</fullName>
            </value>
            <value>
                <fullName>Best Western (BWRM)</fullName>
            </value>
            <value>
                <fullName>Call Center - Property Direct</fullName>
            </value>
            <value>
                <fullName>Call Center - Third Party</fullName>
            </value>
            <value>
                <fullName>Channel Direct Integration</fullName>
            </value>
            <value>
                <fullName>Commission Processing</fullName>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>Corp RFP Consortia</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>DataBridge</fullName>
            </value>
            <value>
                <fullName>Data Exchange</fullName>
            </value>
            <value>
                <fullName>Demand360 EE</fullName>
            </value>
            <value>
                <fullName>Demand360 PE</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>EZRMS</fullName>
            </value>
            <value>
                <fullName>Fuzionlink - Plus</fullName>
            </value>
            <value>
                <fullName>Fuzionlink - Premium</fullName>
            </value>
            <value>
                <fullName>Fuzionlink - Pro</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Hilton OnQ</fullName>
            </value>
            <value>
                <fullName>iDeas</fullName>
            </value>
            <value>
                <fullName>iHotelier OTA Sync</fullName>
            </value>
            <value>
                <fullName>iTrak</fullName>
            </value>
            <value>
                <fullName>Merchant Programs - EQC</fullName>
            </value>
            <value>
                <fullName>Merchant Programs - Kayak</fullName>
            </value>
            <value>
                <fullName>Merchant Programs - Orbitz</fullName>
            </value>
            <value>
                <fullName>MobiBook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>