force-app/main/default/objects/Asset__x/fields/Web_Solutions_Child_Asset_2_c__c.field-meta.xml
<CustomField>
    <fullName>Web_Solutions_Child_Asset_2_c__c</fullName>
    <externalDeveloperName>Web_Solutions_Child_Asset_2__c</externalDeveloperName>
    <label>Web Solutions Child Asset #2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10-Page Mobile Plus</fullName>
            </value>
            <value>
                <fullName>10 Page Mobile Pro</fullName>
            </value>
            <value>
                <fullName>35 Directory Submissions</fullName>
            </value>
            <value>
                <fullName>5-Page Mobile Pro</fullName>
            </value>
            <value>
                <fullName>Additional Language for Facebook Tabs</fullName>
            </value>
            <value>
                <fullName>Annual On-Site SEO</fullName>
            </value>
            <value>
                <fullName>Bing Local - Claim &amp; Optimize</fullName>
            </value>
            <value>
                <fullName>Blog Creation &amp; Optiomization</fullName>
            </value>
            <value>
                <fullName>Custom Premium</fullName>
            </value>
            <value>
                <fullName>Custom Pro</fullName>
            </value>
            <value>
                <fullName>Custom Pro Bundle</fullName>
            </value>
            <value>
                <fullName>Facebook Booking Mask</fullName>
            </value>
            <value>
                <fullName>Facebook Contest</fullName>
            </value>
            <value>
                <fullName>Google+ Creation</fullName>
            </value>
            <value>
                <fullName>Google + Local - Claim &amp; Optimize</fullName>
            </value>
            <value>
                <fullName>HTK Website</fullName>
            </value>
            <value>
                <fullName>HTML Website</fullName>
            </value>
            <value>
                <fullName>MobiBook</fullName>
            </value>
            <value>
                <fullName>Mobile Enabled Site</fullName>
            </value>
            <value>
                <fullName>Mobile Portal</fullName>
            </value>
            <value>
                <fullName>Multilingual Annual SEO</fullName>
            </value>
            <value>
                <fullName>Property Facebook Tab</fullName>
            </value>
            <value>
                <fullName>Quarterly On-Site SEO</fullName>
            </value>
            <value>
                <fullName>Research on Niche Communities</fullName>
            </value>
            <value>
                <fullName>Season/Event Pack</fullName>
            </value>
            <value>
                <fullName>Select Pro</fullName>
            </value>
            <value>
                <fullName>SEO Rank Packs - 10 Pieces of Content &amp; 150 Links</fullName>
            </value>
            <value>
                <fullName>SMO Premium</fullName>
            </value>
            <value>
                <fullName>SMO Pro</fullName>
            </value>
            <value>
                <fullName>SMO Pro-Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>